[gd_scene load_steps=3 format=3 uid="uid://b86b5fhb8masw"]

[ext_resource type="Script" uid="uid://baifthckpuc5q" path="res://Assets/Scripts/pause.gd" id="1_o80xk"]
[ext_resource type="FontFile" uid="uid://i7ebosbamfgb" path="res://Assets/FONTS/WalterTurncoat-Regular.ttf" id="2_7nlou"]

[node name="Pause" type="Control"]
process_mode = 3
layout_direction = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o80xk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -379.5
offset_top = -227.0
offset_right = 379.5
offset_bottom = 227.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14117648, 0.44313726, 0.6039216, 0.7058824)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.5
offset_top = -136.0
offset_right = 186.5
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7nlou")
theme_override_font_sizes/font_size = 42
text = "Jogo Pausado"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retomar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7nlou")
theme_override_font_sizes/font_size = 28
text = "RETOMAR"

[node name="Menu Principal" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7nlou")
theme_override_font_sizes/font_size = 28
text = "MENU PRINCIPAL"

[node name="Sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7nlou")
theme_override_font_sizes/font_size = 28
text = "SAIR"

[connection signal="pressed" from="VBoxContainer/Retomar" to="." method="_on_retomar_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu Principal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_sair_pressed"]
